add remove project feature
